# TradingAgentsSystem

./: .gitignore  Dockerfile  Engineering_Structure.md  INFRASTRUCTURE_SETUP.md  Makefile  README.md  TradingAgents_Architecture_Design.md  TradingAgents_PRD.md  docker-compose.yml  pyproject.toml  requirements.txt  tushare API接口文档.txt
config/: __init__.py  database.py  llm_models.py  redis.py  settings.py
scripts/: setup_dev.py
src/: __init__.py  main.py
